Modified servers and added zipkin with open telemetry
