# cmd/server-b/docs/swagger.json
@@ -8,9 +8,9 @@
     },
     "basePath": "/",
     "paths": {
-        "/get-city-by-zip": {
+        "/get-temperature-by-zipcode": {
             "get": {
-                "description": "Retorna o nome da cidade pelo CEP",
+                "description": "Retorna os graus de temperatura em Celsius, Fahrenheit e Kelvin",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,9 +18,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "City"
+                    "Temperature"
                 ],
-                "summary": "Obtém o nome da cidade através do CEP",
+                "summary": "Obtém as temperaturas de uma cidade a partir do CEP",
                 "parameters": [
                     {
                         "type": "string",
@@ -34,7 +34,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/services.WeatherResponse"
                         }
                     },
                     "404": {
@@ -55,6 +55,22 @@
                             }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "services.WeatherResponse": {
+            "type": "object",
+            "properties": {
+                "temp_C": {
+                    "type": "number"
+                },
+                "temp_F": {
+                    "type": "number"
+                },
+                "temp_K": {
+                    "type": "number"
                 }
             }
         }
